tests/fixtures/errors/deep-circular/src/a.ts
import { c } from './c';
export const a = 'A';